User select, overflow fix, bookmarks manager button.

--- a/web/default.css
+++ b/web/default.css
@@ -36,6 +36,7 @@ body
     display: grid;
     grid-template-columns: 16.66vw 66.66vw 16.66vw;
     grid-template-rows: 10vh 80vh 10vh;
+    user-select: none;
 }
 
 /* ========== Tabs */
@@ -62,7 +63,7 @@ body
     color: rgba(255,255,255,0.4);
     cursor: pointer;
     background: none;
-    user-select: none;
+    
     transition: color 0.3s ease-in-out;
 }
 
@@ -121,13 +122,30 @@ body
 
 #bookmarks-pinned
 {
-    margin-bottom: 2.5rem;
+    box-sizing: content-box;
+    margin-bottom: 1.25rem;
     margin-top: 1.25rem;
     flex-flow: nowrap;
-    
+    min-height: 84px;
+    overflow: hidden;
 }
 
+.fright
+{
+    position: absolute;
+    right: calc(16.66vw + 1rem);
+    color: rgba(255,255,255,0.6);
+    transition: color 0.3s ease-in-out;
+    text-decoration: none;
+    font-weight: 900;
+    display: block;
+    width: 1.5rem;
+}
 
+.fright:hover
+{
+    color: rgba(255,255,255,1);
+}
 
 #bookmarks-crumbs
 {
@@ -154,7 +172,6 @@ body
     justify-content: center;
     cursor: pointer;
     transition: background 0.3s ease-in-out;
-    user-select: none;
 }
 
  .fade 
@@ -224,10 +241,6 @@ body
     height: 48px;
 }
 
-#bookmarks-crumbs *
-{
-    user-select: none;
-}
 
 #bookmarks-crumbs .separator
 {
